# graphix-editor

./: .gitignore  CMakeLists.txt  README.md
documentation/: CMakeLists.txt  doxy.config.in
graphix-editor/: CMakeLists.txt
graphix-editor/src/: graphix-editor.cpp  graphix_editor.cpp  wasd.cpp  wasd.hpp  wasd_movement.h  wasd_movement.hpp
unit-testing/: CMakeLists.txt
unit-testing/src/: unit-testing.cpp
